--- a/_posts/2023-06-17-trio.md
+++ b/_posts/2023-06-17-trio.md
@@ -8,4 +8,4 @@ categories: live UEDAKaeTrio
 ![8-19live](https://pbs.twimg.com/media/FylUyOiaYAAj8OM?format=jpg&name=large)
 
 I'm very glad to announce starting "UEDA Kae Trio" and these first live.
-Yoyaku→ [Form](https://docs.google.com/forms/d/e/1FAIpQLSeQK5L47nfeOsPsfxc779hoyywpqvJqFotvIj-Bqh0d0pBKjw/viewform?usp=sf_link) [Twitter](https://twitter.com/kaerando) or FCCCP@outlook.jp
+Yoyaku→ [Form](https://docs.google.com/forms/d/e/1FAIpQLSeQK5L47nfeOsPsfxc779hoyywpqvJqFotvIj-Bqh0d0pBKjw/viewform?usp=sf_link) ,[Twitter](https://twitter.com/kaerando) or [Mail](<mailto:fcccp@outlook.jp>)
