--- a/_posts/2023-06-18-stanford.md
+++ b/_posts/2023-06-18-stanford.md
@@ -6,4 +6,22 @@ categories: Work
 ---
 
 
-https://soundcloud.com/kaerando/stanfordprison?si=5c36c70a08df492eb76d99232efb43c4&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing
+[Work](https://soundcloud.com/kaerando/stanfordprison?si=5c36c70a08df492eb76d99232efb43c4&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing)
+
+大学の卒業制作。フリージャズ・バラードの録音に挑戦しました。
+
+"現代では、多くの人は日常のすぐそばから貧困と自死の影に見つめられ、生まれてから
+一度の精神的疾患も無く成人を迎えるのも困難となってきていると言っても
+過言ではない。今回の卒業研究ではそういった、抑圧された人、あるいは意気消沈した人
+のための音楽を考えてみた。
+
+鬱状態、またそれ程ひどくなくとも落ち込んでいるとき、明るく明快な音楽よりも、
+むしろ暗いものや抽象的な音楽に心惹かれる傾向にある、と自分の経験上考える。
+例えば、Keith Jarrettの『ケルン・コンサート』は2011年当時、震災直後の天気や
+被害状況を伝える番組にて、その情報のバックにフルで放送された。
+ジャズの語法を基盤とした即興の音楽が、効果的に、傷ついた人の心の癒しになりうる
+と考えられる根拠の一つである。"
+
+Piano:柏太朗
+
+Drum:山口友郎
