--- a/_posts/2023-06-02-bun.md
+++ b/_posts/2023-06-02-bun.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "文鳥!"
+title:  "あ！文鳥！"
 date:   2023-06-02 00:00:00 +0900
 categories: bun
 ---
@@ -9,6 +9,6 @@ bun think so too.
 bun think so too..
 
 bun. mooo
-
+<br><br><br><br><br><br>
 
 ホームページが公開されました。
