--- a/_posts/2023-08-16-past.md
+++ b/_posts/2023-08-16-past.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "過去のライブ - 2023-08-17更新"
+title:  "過去のライブ - 2023-08-21更新"
 date:   2023-08-16 00:00:00 +0900
 categories: Live Schedule Archive
 ---
@@ -10,57 +10,39 @@ _このページは随時更新されます。_
 _定期イベントは除外。_
 <br><br>
 
-### 2022-05
+### 2023-08
 
-26 東中野@ALT_SPEAKER
+05 読売ランド@masa2sets 4周年記念 夏フェス！！
 
-ds 大内竜也　pf 相澤亙
+pf 本多小花　ds 小久保直音
 <br><br>
 
-### 2022-06
+14 藤沢@Sound Market
 
-18　Do Jazz Senzoku
+sax 大場僚　pf 相澤亙
+
+19 赤坂@dot&blue 上田かえトリオ Homage to Jazz
+
+pf 市川光　ds 岸颯馬
 <br><br>
 
-### 2022-08
-
-26 東中野@ALT_SPEAKER
-
-ds 大内竜也　tp 伊藤誠司　pf 相澤亙
 <br><br>
 
-### 2022-09
+### 2023-07
 
-24 定期演奏会
+02 自由が丘@hyphen
+
+tp 湯本裕唯　tb 横山美里　gt 野村哲史　ds 米田昌平
 <br><br>
 
-### 2022-10
+### 2023-03
 
-29 東工大学園祭 幕Jonathan Group
+09 広尾@ルグランフィーユエフィス
+
+ds 山口友郎　tp 菊地立起　pf 市川光
 <br><br>
 
-### 2022-11
-
-22 朝霞台@停車場 学生セッション
-
-sax 嶋根颯汰　pf 市川光　ds 岸颯馬
-<br><br>
-
-### 2022-12
-
-03 新宿@aLive
-
-pf 久田彪
-<br><br>
-
-19 東中野@ALT_SPEAKER Song For_
-
-tp 佐藤貴峰　pf リカウ　ds 一色雄也
-<br><br>
-
-### 2023-01
-
-27 中野@Jet Bar に
+31 中野@Jet Bar Dos a Dos
 
 vo あおやぎしんや
 <br><br>
@@ -82,33 +64,57 @@ sax 佐藤航　pf リカウ　ds 山口友郎
 pf リカウ　vo あおやぎしんや　sax 佐藤航　ds 山口友郎
 <br><br>
 
-### 2023-03
+### 2023-01
 
-09 広尾@ルグランフィーユエフィス
-
-ds 山口友郎　tp 菊地立起　pf 市川光
-<br><br>
-
-31 中野@Jet Bar Dos a Dos
+27 中野@Jet Bar に
 
 vo あおやぎしんや
 <br><br>
 
-### 2023-07
+### 2022-12
 
-02 自由が丘@hyphen
+03 新宿@aLive
 
-tp 湯本裕唯　tb 横山美里　gt 野村哲史　ds 米田昌平
+pf 久田彪
 <br><br>
 
-### 2023-08
+19 東中野@ALT_SPEAKER Song For_
 
-05 読売ランド@masa2sets 4周年記念 夏フェス！！
-
-pf 本多小花　ds 小久保直音
+tp 佐藤貴峰　pf リカウ　ds 一色雄也
 <br><br>
 
-14 藤沢@Sound Market
+### 2022-11
 
-sax 大場僚　pf 相澤亙
+22 朝霞台@停車場 学生セッション
+
+sax 嶋根颯汰　pf 市川光　ds 岸颯馬
+<br><br>
+
+### 2022-10
+
+29 東工大学園祭 幕Jonathan Group
+<br><br>
+
+### 2022-09
+
+24 定期演奏会
+<br><br>
+
+### 2022-08
+
+26 東中野@ALT_SPEAKER
+
+ds 大内竜也　tp 伊藤誠司　pf 相澤亙
+<br><br>
+
+### 2022-06
+
+18　Do Jazz Senzoku
+<br><br>
+
+### 2022-05
+
+26 東中野@ALT_SPEAKER
+
+ds 大内竜也　pf 相澤亙
 <br><br>
