--- a/_posts/2023-08-17-schedule.md
+++ b/_posts/2023-08-17-schedule.md
@@ -13,12 +13,16 @@ _時刻、メンバーなど変更になる可能性があります。_
 
 24(thu)18:00 川崎@TSUTAYA SHARE LOUNGE かわさきジャズ ライブ
 
+1時間1100円~
+
 pf Jessie
 <br><br>
 
 ### 2023-09
 
-08(fri)19:00 読売ランド前@masa2sets Jazz Night/Next Jam セッション
+08(fri)19:00 読売ランド前@masa2sets Jazz Night セッション
+
+2000円/学割1500円
 
 sax 石野華穂　pf 本多小花　ds 小久保直音
 <br><br>
@@ -26,10 +30,13 @@ sax 石野華穂　pf 本多小花　ds 小久保直音
 30(sat)19:00 自由が丘@hyphen Yui Yumoto Quintet ライブ
 
 tp 湯本裕唯　tb 横山美里　gt 野村哲史　ds 米田昌平
+<br><br>
 
 ### 2023-10
 
-13(fri)19:00 読売ランド前@masa2sets Jazz Night/Next Jam セッション
+13(fri)19:00 読売ランド前@masa2sets Jazz Night セッション
+
+2000円/学割1500円
 
 sax 石野華穂　pf 本多小花　ds 小久保直音
 <br><br>
@@ -39,3 +46,4 @@ sax 石野華穂　pf 本多小花　ds 小久保直音
 07(tue)??:?? 都立大学@jammin ?
 
 sax 佐藤航　ds 山口友郎
+<br><br>
