--- a/_posts/2023-08-17-schedule.md
+++ b/_posts/2023-08-17-schedule.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Live Schedule - 2023-08-21更新"
+title:  "Live Schedule - 2023-08-27更新"
 date:   2023-08-17 00:00:00 +0900
 categories: Live Schedule
 ---
@@ -8,15 +8,6 @@ categories: Live Schedule
 _このページは随時更新されます。お問い合わせフォームより予約受付。_
 
 _時刻、メンバーなど変更になる可能性があります。_
-
-### 2023-08
-
-24(thu)18:00 川崎@TSUTAYA SHARE LOUNGE かわさきジャズ ライブ
-
-1時間1100円~
-
-pf Jessie
-<br><br>
 
 ### 2023-09
 
@@ -28,6 +19,8 @@ sax 石野華穂　pf 本多小花　ds 小久保直音
 <br><br>
 
 30(sat)19:00 自由が丘@hyphen Yui Yumoto Quintet ライブ
+
+2500円+2 order
 
 tp 湯本裕唯　tb 横山美里　gt 野村哲史　ds 米田昌平
 <br><br>
