--- a/_posts/2023-08-17-schedule.md
+++ b/_posts/2023-08-17-schedule.md
@@ -11,12 +11,6 @@ _時刻、メンバーなど変更になる可能性があります。_
 
 ### 2023-09
 
-08(fri)19:00 読売ランド前@masa2sets Jazz Night セッション
-
-2000円/学割1500円
-
-sax 石野華穂　pf 本多小花　ds 小久保直音
-<br><br>
 
 30(sat)19:00 自由が丘@hyphen Yui Yumoto Quintet ライブ
 
@@ -26,6 +20,15 @@ tp 湯本裕唯　tb 横山美里　gt 野村哲史　ds 米田昌平
 <br><br>
 
 ### 2023-10
+
+08(sun)18:30 大久保@cafe DOLCE VITA _LIVE_
+
+2000円+order
+
+vo あおやぎしんや　sax 佐藤航　ds 山口友郎 _pf_ _?????????_
+
+
+<br><br>
 
 13(fri)19:00 読売ランド前@masa2sets Jazz Night セッション
 
@@ -39,4 +42,13 @@ sax 石野華穂　pf 本多小花　ds 小久保直音
 07(tue)??:?? 都立大学@jammin ?
 
 sax 佐藤航　ds 山口友郎
+<br><br>
+
+### 2023-12
+
+23(sat)19:?? 新宿@Bar aLive
+
+2500+2 order
+
+vo あおやぎしんや　tp 佐藤貴峰
 <br><br>
