--- a/_posts/2023-08-16-past.md
+++ b/_posts/2023-08-16-past.md
@@ -10,6 +10,15 @@ _このページは随時更新されます。_
 _定期イベントは除外。_
 <br><br>
 
+### 2023-09
+
+08(fri)19:00 読売ランド前@masa2sets Jazz Night セッション
+
+2000円/学割1500円
+
+sax 石野華穂　pf 本多小花　ds 小久保直音
+<br><br>
+
 ### 2023-08
 
 05 読売ランド@masa2sets 4周年記念 夏フェス！！
