--- a/_posts/2023-10-05-schedule.md
+++ b/_posts/2023-10-05-schedule.md
@@ -11,37 +11,39 @@ _時刻、メンバーなど変更になる可能性があります。_
 
 ### 2023-10
 
-08(sun)18:30 大久保@cafe DOLCE VITA _LIVE_
+08(sun)18:30 大久保@[cafe DOLCE VITA](http://cafedolcevita.music.coocan.jp/dolcevita/cafe.html) _LIVE_
 
 2000円+order
 
 vo あおやぎしんや　sax 佐藤航　ds 山口友郎 _pf_ _?????????_
 <br><br>
 
-13(fri)19:00 読売ランド前@masa2sets Jazz Night セッション
+13(fri)19:00 読売ランド前[@masa2sets](https://www.masa2sets.com/yomiuriland) Jazz Night セッション
 
 2000円/学割1500円
 
 sax 石野華穂　pf 本多小花　ds 小久保直音
 <br><br>
 
-21(sat)18:30 向ヶ丘遊園@白いハコ ライブ
+21(sat)18:30 向ヶ丘遊園@[白いハコ](https://www.instagram.com/shiroi_hako_/?hl=ja)　Starlight Music Day! vol2 ライブ
 
-2500円
+2500円　BOTTEGAミニワインボトル配布
 
 pf 久田彪
 <br><br>
 
 ### 2023-11
 
-07(tue)??:?? 都立大学@jammin ?
+07(tue)19:30 都立大学@[jammin](http://www.jammin-meguro.sakura.ne.jp) TRIOS.　ライブ
+
+2000円/学割1500円 +order
 
 sax 佐藤航　ds 山口友郎
 <br><br>
 
 ### 2023-12
 
-23(sat)19:?? 新宿@Bar aLive
+23(sat)19:?? 新宿@[Bar aLive](https://bar-alive.com)
 
 2500円+2 order
 
