--- a/_posts/2024-08-18-schedule.md
+++ b/_posts/2024-08-18-schedule.md
@@ -12,11 +12,11 @@ _時刻、メンバーなど変更になる可能性があります。_
 
 ### 2024-09
 
-10(tue)??:00 藤沢@[Sound Market](https://soundmarket.jimdofree.com)
+10(tue)19:00 藤沢@[Sound Market](https://soundmarket.jimdofree.com)
 
-ソロ
+SOLO
 
-¥未定
+¥500と投げ銭
 
 ba 上田かえ
 <br><br>
