--- a/_posts/2025-05-18-past.md
+++ b/_posts/2025-05-18-past.md
@@ -11,6 +11,14 @@ _定期イベントは除外。_
 
 <br><br>
 
+### 2025-05
+
+7 自由が丘@[hyphen](http://r.goope.jp/hyphen/)
+
+tp Yui Yumoto　pf Momiji Ogawa　ds Hayato Yamazaki
+
+<br><br>
+
 ### 2025-04
 
 12 藤沢[Sound Cafe Bamboo](https://www.bamboo-fujisawa.com)
